add telegram template for notifications

--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -185,7 +185,8 @@
       "options": {
         "message_title": "Message & Title",
         "message": "Message",
-        "discord": "Discord"
+        "discord": "Discord",
+        "telegram": "Telegram"
       }
     }
   },
