--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -268,5 +268,23 @@
       },
       "name": "Stunden zählen"
     }
+  },
+  "entity": {
+    "event": {
+      "lesson_change_event": {
+        "state_attributes": {
+          "event_type": {
+            "state": {
+              "homework": "Hausaufgabe hinzugefügt",
+              "code": "Stunden-Status geändert",
+              "rooms": "Raum Änderung",
+              "teachers": "Lehrer Änderung",
+              "cancelled": "Stunde fällt aus",
+              "lesson_change": "Stunde ausgetauscht"
+            }
+          }
+        }
+      }
+    }
   }
 }
