--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -280,8 +280,8 @@
               "code": "Lesson status changed",
               "rooms": "Room changed",
               "teachers": "Teacher changed",
-              "cancelled": "Lesson is cancelled",
-              "lesson_change": "Lesson was swapped"
+              "cancelled": "Lesson cancelled",
+              "lesson_change": "Lesson swapped"
             }
           }
         }
