add homework event entity

--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -275,12 +275,20 @@
         "state_attributes": {
           "event_type": {
             "state": {
-              "homework": "Hausaufgabe hinzugefügt",
               "code": "Stunden-Status geändert",
               "rooms": "Raum Änderung",
               "teachers": "Lehrer Änderung",
               "cancelled": "Stunde fällt aus",
               "lesson_change": "Stunde ausgetauscht"
+            }
+          }
+        }
+      },
+      "homework_event": {
+        "state_attributes": {
+          "event_type": {
+            "state": {
+              "homework": "Hausaufgabe hinzugefügt"
             }
           }
         }
