--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -192,10 +192,10 @@
     "calendar_description": {
       "options": {
         "none": "None",
-        "JSON": "JSON",
-        "Lesson Info": "Lesson Info",
-        "Class Name (short)": "Class Name (short)",
-        "Class Name (long)": "Class Name (long)"
+        "json": "JSON",
+        "lesson_info": "Lesson Info",
+        "class_name_short": "Class Name (short)",
+        "class_name_long": "Class Name (long)"
       }
     }
   },
