feat: Improve timetable source options flow and fix integration configuration
- Fix timetable query to respect school year boundaries
- Add configurable timetable source options flow with separate sub-forms
- Update integration to read timetable_source from options instead of data
- Add proper validation for all timetable source types (Personal, Class, Teacher, Student)
- Add translation keys for new options flow steps in all languages (en, de, nl)
- Restructure options flow to use dedicated forms for each source type
- Fix saving and validation issues in options configuration

--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -70,7 +70,31 @@
           "calendar": "Kalender",
           "lesson": "Stunden Name",
           "backend": "Backend",
-          "notify_menu": "Notify Menü"
+          "notify_menu": "Notify Menü",
+          "timetable_source": "Stundenplan-Quelle"
+        }
+      },
+      "timetable_source": {
+        "description": "Wähle die Stundenplan-Quelle"
+      },
+      "timetable_source_klasse": {
+        "description": "Geben Sie den Klassenname ein",
+        "data": {
+          "klasse": "Klasse"
+        }
+      },
+      "timetable_source_teacher": {
+        "description": "Geben Sie den Namen des Lehrers ein",
+        "data": {
+          "fore_name": "Vorname",
+          "surname": "Nachname"
+        }
+      },
+      "timetable_source_student": {
+        "description": "Geben Sie den Namen des Schülers ein",
+        "data": {
+          "fore_name": "Vorname",
+          "surname": "Nachname"
         }
       },
       "filter": {
