add get_schoolyears service

--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -275,6 +275,16 @@
         }
       },
       "name": "Stunden zählen"
+    },
+    "get_schoolyears": {
+      "description": "WebUntis Schuljahre abrufen.",
+      "fields": {
+        "device_id": {
+          "name": "Gerät",
+          "description": "Eine Instanz auswählen"
+        }
+      },
+      "name": "Schuljahre abrufen"
     }
   },
   "entity": {
