--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -37,20 +37,23 @@
         "description": "Name eines Schülers eingeben",
         "data": {
           "surname": "Nachname",
-          "fore_name": "Vorname"
+          "fore_name": "Vorname",
+          "back": "Zurück"
         }
       },
       "pick_teacher": {
         "description": "Name eines Lehrers eingeben",
         "data": {
           "surname": "Nachname",
-          "fore_name": "Vorname"
+          "fore_name": "Vorname",
+          "back": "Zurück"
         }
       },
       "pick_klasse": {
         "description": "Klasse eingeben",
         "data": {
-          "klasse": "Klasse"
+          "klasse": "Klasse",
+          "back": "Zurück"
         }
       }
     }
