add default value + add strings in en.json

--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -83,11 +83,13 @@
           "filter_mode": "Filter mode",
           "filter_subjects": "Filter mode - subjects",
           "filter_description": "Filter mode - Description",
-          "invalid_subjects": "No Subjects"
+          "invalid_subjects": "No Subjects",
+          "exclude_filter_comparison": "Exclude filter in comparison"
         },
         "data_description": {
           "filter_description": "Hide lessons that contain the following phrases in the description. (Comma-separated list) \nNot affected by blacklist/whitelist.",
-          "invalid_subjects": "Allow lessons with no subjects"
+          "invalid_subjects": "Allow lessons with no subjects",
+          "exclude_filter_comparison": "Exclude filtered lessons from notifications or events. Useful when you want to update the event entity for a lesson even if it’s filtered out."
         }
       },
       "lesson": {
