--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -83,11 +83,13 @@
           "filter_mode": "Fächer Filter",
           "filter_subjects": "Fächer Filter - Fächer",
           "filter_description": "Fächer Filter - Beschreibung",
-          "invalid_subjects": "Kein Fach"
+          "invalid_subjects": "Kein Fach",
+          "exclude_filter_comparison": "Filter von Benachrichtigungen und Ereignissen ausschließen"
         },
         "data_description": {
           "filter_description": "Verstecke Stunden, die die folgenden Ausdrücke in der Beschreibung enthalten. (Kommagetrennte Liste) \nWird nicht von Black/Whitelist beeinflusst.",
-          "invalid_subjects": "Erlaube Stunden ohne Fach"
+          "invalid_subjects": "Erlaube Stunden ohne Fach",
+          "exclude_filter_comparison": "Stunden für die Änderungsbenachrichtigung nicht filtern."
         }
       },
       "lesson": {
